lib/scripts/istio/istio-virtual-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: VirtualService
metadata:
  name: my-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /jenkins
    route:
    - destination:
        host: jenkins
        port:
          number: 80
  - match:
    - uri:
        prefix: /sonarqube
    route:
    - destination:
        host: sonarqube
        port:
          number: 9000
